--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <div id="title_bar">
   <div id="title">
     <h1 class="page_title">Olivehill</h1>
-    <p class="lastupdate">09/03/2020 02:24:00 PM</p>
+    <p class="lastupdate">09/03/2020 02:29:00 PM</p>
   </div>
   <div id="rss_link"><a href="rss.xml">RSS</a></div>
   <div id="reports">
@@ -62,19 +62,19 @@
       </tr>
       <tr>
         <td class="label">Dew Point</td>
-        <td class="data">54.7&#176;F</td>
+        <td class="data">53.6&#176;F</td>
       </tr>
       <tr>
         <td class="label">Humidity</td>
-        <td class="data">24%</td>
+        <td class="data">23%</td>
       </tr>
       <tr>
         <td class="label">Barometer</td>
-        <td class="data">29.905 inHg (-0.088)</td>
+        <td class="data">29.897 inHg (-0.095)</td>
       </tr>
       <tr>
         <td class="label">Wind</td>
-        <td class="data">2 mph NE (45&#176;)</td>
+        <td class="data">3 mph NNE (22&#176;)</td>
       </tr>
       <tr>
         <td class="label">Rain Rate</td>
@@ -86,7 +86,7 @@
       </tr>
       <tr>
         <td class="label">Inside Temperature</td>
-        <td class="data">81.2&#176;F</td>
+        <td class="data">81.3&#176;F</td>
       </tr>
       <tr>
         <td class="label">Inside Humidity</td>
@@ -153,20 +153,20 @@
       <tr>
         <td class="label">Outside Temperature</td>
         <td class="data new_row hilo_day">
-          <span title="02:23:32 PM">
-            97.7</span><br/>
+          <span title="02:25:14 PM">
+            97.9</span><br/>
           <span title="05:52:55 AM">
             54.7</span>
         </td>
         <td class="data new_row hilo_week">
-          <span title="02:23:32 PM (Thursday)">
-            97.7</span><br/>
+          <span title="02:25:14 PM (Thursday)">
+            97.9</span><br/>
           <span title="06:21:16 AM (Sunday)">
             49.7</span>
         </td>
         <td class="data new_row hilo_month">
-          <span title="09/03/2020 02:23:32 PM">
-            97.7</span><br/>
+          <span title="09/03/2020 02:25:14 PM">
+            97.9</span><br/>
           <span title="09/01/2020 06:47:50 AM">
             50.8</span>
         </td>
@@ -187,16 +187,16 @@
       <tr>
         <td class="label">Heat Index</td>
         <td class="data new_row hilo_day">
-          <span title="02:23:32 PM" class="hival">
-            97.7</span>
+          <span title="02:25:14 PM" class="hival">
+            97.9</span>
         </td>
         <td class="data new_row hilo_week">
-          <span title="02:23:32 PM (Thursday)" class="hival">
-            97.7</span>
+          <span title="02:25:14 PM (Thursday)" class="hival">
+            97.9</span>
         </td>
         <td class="data new_row hilo_month">
-          <span title="09/03/2020 02:23:32 PM" class="hival">
-            97.7</span>
+          <span title="09/03/2020 02:25:14 PM" class="hival">
+            97.9</span>
         </td>
         <td class="data new_row hilo_year">
           <span title="08/16/2020 03:43:16 PM" class="hival">
@@ -271,20 +271,20 @@
         <td class="data new_row hilo_day">
           <span title="06:37:07 AM">
             93</span><br/>
-          <span title="02:18:22 PM">
-            23</span>
+          <span title="02:26:02 PM">
+            22</span>
         </td>
         <td class="data new_row hilo_week">
           <span title="06:37:07 AM (Thursday)">
             93</span><br/>
-          <span title="02:18:22 PM (Thursday)">
-            23</span>
+          <span title="02:26:02 PM (Thursday)">
+            22</span>
         </td>
         <td class="data new_row hilo_month">
           <span title="09/03/2020 06:37:07 AM">
             93</span><br/>
-          <span title="09/03/2020 02:18:22 PM">
-            23</span>
+          <span title="09/03/2020 02:26:02 PM">
+            22</span>
         </td>
         <td class="data new_row hilo_year">
           <span title="06/21/2020 07:07:00 AM">
@@ -305,8 +305,8 @@
         <td class="data new_row hilo_day">
           <span title="08:26:02 AM">
             30.035</span><br/>
-          <span title="02:21:02 PM">
-            29.903</span>
+          <span title="02:28:02 PM">
+            29.897</span>
         </td>
         <td class="data new_row hilo_week">
           <span title="09:40:02 AM (Wednesday)">
@@ -470,8 +470,8 @@
       <tr>
         <td class="label">Inside Temperature</td>
         <td class="data new_row hilo_day">
-          <span title="02:19:02 PM">
-            81.2</span><br/>
+          <span title="02:25:02 PM">
+            81.3</span><br/>
           <span title="06:56:02 AM">
             68.2</span>
         </td>
@@ -610,11 +610,11 @@
     </tr>
     <tr>
       <td class="label">Server uptime</td>
-      <td class="data">1 day, 23 hours, 37 minutes</td>
+      <td class="data">1 day, 23 hours, 42 minutes</td>
     </tr>
     <tr>
       <td class="label">WeeWX uptime</td>
-      <td class="data">1 day, 23 hours, 37 minutes</td>
+      <td class="data">1 day, 23 hours, 42 minutes</td>
     </tr>
     <tr>
       <td class="label">WeeWX version</td>
