--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <div id="title_bar">
   <div id="title">
     <h1 class="page_title">Olivehill</h1>
-    <p class="lastupdate">09/03/2020 02:59:00 PM</p>
+    <p class="lastupdate">09/03/2020 03:04:00 PM</p>
   </div>
   <div id="rss_link"><a href="rss.xml">RSS</a></div>
   <div id="reports">
@@ -70,11 +70,11 @@
       </tr>
       <tr>
         <td class="label">Barometer</td>
-        <td class="data">29.884 inHg (-0.088)</td>
+        <td class="data">29.885 inHg (-0.078)</td>
       </tr>
       <tr>
         <td class="label">Wind</td>
-        <td class="data">2 mph NE (45&#176;)</td>
+        <td class="data">3 mph N (0&#176;)</td>
       </tr>
       <tr>
         <td class="label">Rain Rate</td>
@@ -86,7 +86,7 @@
       </tr>
       <tr>
         <td class="label">Inside Temperature</td>
-        <td class="data">82.4&#176;F</td>
+        <td class="data">82.7&#176;F</td>
       </tr>
       <tr>
         <td class="label">Inside Humidity</td>
@@ -153,20 +153,20 @@
       <tr>
         <td class="label">Outside Temperature</td>
         <td class="data new_row hilo_day">
-          <span title="02:57:20 PM">
-            99.3</span><br/>
+          <span title="03:00:56 PM">
+            99.5</span><br/>
           <span title="05:52:55 AM">
             54.7</span>
         </td>
         <td class="data new_row hilo_week">
-          <span title="02:57:20 PM (Thursday)">
-            99.3</span><br/>
+          <span title="03:00:56 PM (Thursday)">
+            99.5</span><br/>
           <span title="06:21:16 AM (Sunday)">
             49.7</span>
         </td>
         <td class="data new_row hilo_month">
-          <span title="09/03/2020 02:57:20 PM">
-            99.3</span><br/>
+          <span title="09/03/2020 03:00:56 PM">
+            99.5</span><br/>
           <span title="09/01/2020 06:47:50 AM">
             50.8</span>
         </td>
@@ -187,16 +187,16 @@
       <tr>
         <td class="label">Heat Index</td>
         <td class="data new_row hilo_day">
-          <span title="02:57:20 PM" class="hival">
-            99.3</span>
+          <span title="03:00:56 PM" class="hival">
+            99.5</span>
         </td>
         <td class="data new_row hilo_week">
-          <span title="02:57:20 PM (Thursday)" class="hival">
-            99.3</span>
+          <span title="03:00:56 PM (Thursday)" class="hival">
+            99.5</span>
         </td>
         <td class="data new_row hilo_month">
-          <span title="09/03/2020 02:57:20 PM" class="hival">
-            99.3</span>
+          <span title="09/03/2020 03:00:56 PM" class="hival">
+            99.5</span>
         </td>
         <td class="data new_row hilo_year">
           <span title="08/16/2020 03:43:16 PM" class="hival">
@@ -305,8 +305,8 @@
         <td class="data new_row hilo_day">
           <span title="08:26:02 AM">
             30.035</span><br/>
-          <span title="02:54:02 PM">
-            29.883</span>
+          <span title="03:00:02 PM">
+            29.881</span>
         </td>
         <td class="data new_row hilo_week">
           <span title="09:40:02 AM (Wednesday)">
@@ -448,7 +448,7 @@
         </td>
         <td class="data new_row hilo_month">
           0<br/>
-          164
+          163
         </td>
         <td class="data new_row hilo_year">
           2<br/>
@@ -470,8 +470,8 @@
       <tr>
         <td class="label">Inside Temperature</td>
         <td class="data new_row hilo_day">
-          <span title="02:57:02 PM">
-            82.4</span><br/>
+          <span title="03:02:02 PM">
+            82.7</span><br/>
           <span title="06:56:02 AM">
             68.2</span>
         </td>
@@ -610,11 +610,11 @@
     </tr>
     <tr>
       <td class="label">Server uptime</td>
-      <td class="data">2 days, 0 hours, 12 minutes</td>
+      <td class="data">2 days, 0 hours, 17 minutes</td>
     </tr>
     <tr>
       <td class="label">WeeWX uptime</td>
-      <td class="data">2 days, 0 hours, 12 minutes</td>
+      <td class="data">2 days, 0 hours, 17 minutes</td>
     </tr>
     <tr>
       <td class="label">WeeWX version</td>
